<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.gm.ultifi.helloultifiuserapp.MainActivity">


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="400dp"
        android:layout_marginTop="200dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/editText_enter_your_name"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="31sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_sayHello"
        android:layout_width="256dp"
        android:layout_height="79dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:fontFamily="serif"
        android:text="@string/button_say_hello"
        android:textColor="@color/black"
        android:textSize="31sp"
        app:layout_constraintStart_toEndOf="@id/editText_name"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_response_title"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="400dp"
        android:layout_marginTop="300dp"
        android:text="@string/textView_rpc_response"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_response"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textView_response_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sub_sec"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="400dp"
        android:layout_marginTop="400dp"
        android:text="@string/button_subscribe_sec"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_unsub_sec"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="750dp"
        android:layout_marginTop="400dp"
        android:text="@string/button_unsubscribe_sec"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_sec_display"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginStart="575dp"
        android:layout_marginTop="500dp"
        android:fontFamily="serif-monospace"
        android:hint="hh:mm:ss"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sub_min"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="1200dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#FF8800EE"
        android:text="@string/button_subscribe_min"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_unsub_min"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="1550dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#FF8800EE"
        android:text="@string/button_unsubscribe_min"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_min_display"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginStart="1375dp"
        android:layout_marginTop="500dp"
        android:fontFamily="serif-monospace"
        android:hint="hh:mm:ss"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>